# qa_guru_advanced_1

./: .env.example  README.md  main.py  pyproject.toml
board_api/: crud.py
models/: users.py
routers/: login_form.py  operation_with_user.py
tests/: test_login_form.py  test_operation_with_user.py  test_users.py
