[tool.poetry]
name = "qaguru-advanced-1"
version = "0.1.0"
description = ""
authors = ["Dimitri Maksimov <dmitry-maksimov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.4"
python-dotenv = "^1.0.1"

[tool.pytest.ini_options]
addopts = "-s -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
